--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <title>Table with Text Inputs</title>
   <style>
-    input {
-        width: 30px;
+    table {
+        width: 100vw;
+        table-layout: fixed;
+    } 
+    
+    th, td {
+        width: 20%;
+        word-wrap: break-word;
+    }
+
+    input[type=number] {
+        width: 100%;
     }
   </style>
 </head>
