--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
   <title>Table with Text Inputs</title>
   <style>
+    body {
+        font-size: 4vh; /* Adjust as needed */
+    }
     table {
-        width: 100vw;
+        width: 100%;
         table-layout: fixed;
     } 
-    
     th, td {
         width: 20%;
         word-wrap: break-word;
+        text-align: center;
+        vertical-align: middle;
     }
-
     input[type=number] {
         width: 100%;
+        font-size: 4vh;
     }
   </style>
 </head>
