--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <td></td>
   </tr>
 </table>
-<button onclick="saveToLocalStorage()">Save</button>
+<button style="width: 50vh;height: 6vh" onclick="saveToLocalStorage()">Save</button>
 
 <script>
 
