--- a/index.html
+++ b/index.html
@@ -123,8 +123,11 @@
     <td><input class="wyrel" type="number"></td>
     <td></td>
   </tr>
+  <tr>
+    <td></td>
+    <td><button style="width: 50vh;height: 6vh" onclick="saveToLocalStorage()">Save</button></td>
+  </tr>
 </table>
-<button style="width: 50vh;height: 6vh" onclick="saveToLocalStorage()">Save</button>
 
 <script>
 
