--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </tr>
   <tr>
     <td></td>
-    <td><button style="width: 50vh;height: 6vh" onclick="saveToLocalStorage()">Save</button></td>
+    <td><button style="width: 30vh;height: 6vh;font-size: 3vh;" onclick="saveToLocalStorage()">Save</button></td>
   </tr>
 </table>
 
